manifests/istio/peer-authentication.yaml
---
# Default mTLS STRICT for all services in istio-system
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
---
# Allow ingress gateways to accept plain HTTP/HTTPS from external clients
# This is required because external clients don't use mTLS
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ingress-admin-mtls
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress-admin
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ingress-user-mtls
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress-user
  mtls:
    mode: PERMISSIVE
